--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -3,7 +3,7 @@
     background-position: 0 0;
     .attention & {
         background-position: -18px 0;
-    	@include animation(pulse, 1.5s, infinite);
+    	@include animate(pulse, 1.5s, $iteration: infinite);
     }
 }
 
