--- a/src/main/resources/scss/_header.scss
+++ b/src/main/resources/scss/_header.scss
@@ -34,7 +34,6 @@ $itemWidth: 275px;
 
 		table,tbody,tr {
 			overflow: hidden;
-			width: auto !important;
 		}
 
 		.x-grid-body,
@@ -43,6 +42,16 @@ $itemWidth: 275px;
 		.x-panel-body-default {
 			background: none;
 			border-width: 0 !important;
+		}
+
+		.x-grid-view {
+			@include scrollbar(rgba(0,0,0,0), rgba(255,255,255,0.5));
+		}
+
+		.hasScrollbar {
+			.x-grid-row .x-grid-cell-inner {
+				margin-right: 0;
+			}
 		}
 
 		.x-grid-row {
@@ -65,7 +74,6 @@ $itemWidth: 275px;
 					}
 				}
 
-				width: 215px !important;
 				color: #ffffff;
 				font-size: 12pt;
 				font-weight: 300;
